fix text overflow

--- a/frontend/src/styles/Calculator.css
+++ b/frontend/src/styles/Calculator.css
@@ -8,6 +8,7 @@
 	padding: 2%;
 	aspect-ratio: 5 / 8;
 	max-height: 80vh;
+	max-width: 50vh;
 	height: 100%;
 }
 
@@ -23,6 +24,7 @@
 #calculator-screen {
 	grid-column: span 5;
 	height: 20%;
+	width: 94%;
 	background-color: #cce3f9;
 	border-radius: 8px;
 	padding: 3%;
@@ -34,7 +36,10 @@
 	color: black;
 	font-family: "Courier New", monospace;
 	margin-top: 5%;
-	box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.3); /* Inward shadow */
+	box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.3);
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .calculator-buttonRed,
